--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "creator": "zhaojian &lt;745984265@qq.com&gt;",
     "license": "ISC",
     "dependencies": {
-        
+        "eslint": "6.2.2"
     },
     "devDependencies": {
        
